[tool.poetry]
name = "leep"
version = "0.1.0"
description = "Python data-structure path-access (leap + deep = leep)"
authors = ["Jean-Louis Fuchs <jean-louis.fuchs@adfinis.com>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.6.0"
pdbpp = "^0.10.3"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
python-lsp-server = "^1.8.2"
python-lsp-black = "^1.3.0"
flake8-bugbear = "^23.9.16"
flake8-debugger = "^4.1.2"
flake8-isort = "^6.1.0"
flake8-docstrings = "^1.7.0"
flake8-string-format = "^0.3.0"
flake8-tuple = "^0.4.1"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
